--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register --resolveJsonModule ./node_modules/typeorm/cli",
     "test": "jest"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
@@ -42,7 +43,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
   }
