--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,14 @@
      "experimentalDecorators": true,                   
      "emitDecoratorMetadata": true,                   
     "module": "commonjs", 
-    "baseUrl": "./src",                                 
+    "baseUrl": "./src",
+    "resolveJsonModule": true,                                 
     "paths": {
       "@modules/*" : ["modules/*"],
       "@config/*" : ["config/*"],
       "@shared/*" : ["shared/*"],
       "@errors/*" : ["errors/*"],
-      "@utils/*" : ["utils/*"],
+      "@utils/*" : ["utils/*"]
     },                                     
    
     "outDir": "./dist", 
