--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "test": "jest",
-    "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts" 
+    "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.3",
@@ -24,6 +24,7 @@
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
+    "Typescript": "npm:typescript@^4.5.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -45,6 +46,6 @@
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.5.3"
   }
 }
