--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.3",
+    "Typescript": "npm:typescript@^4.5.3",
     "bcrypt": "^5.0.1",
     "csv-parse": "^4.16.2",
+    "dayjs": "^1.11.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -24,7 +26,6 @@
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
-    "Typescript": "npm:typescript@^4.5.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
